#1 fixed letter-spacing

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -107,7 +107,6 @@ body {
     position: absolute;
     bottom: 100%;
     margin-bottom: 15px;
-    letter-spacing: -2px;
 
     @media (max-width: $mobile) {
       left: 50%;
@@ -118,6 +117,7 @@ body {
 
   h2 {
     font-size: 34px;
+    letter-spacing: -1px;
 
     @media (max-width: $mobile) {
       font-size: 19px
